base functionality finished, need to do calculations

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"
     ></script>
     <link rel="stylesheet" href="main.css" />
-    <script src="blogPost.js"></script>
   </head>
   <body>
     <section class="section">
@@ -22,77 +21,53 @@
           <div class="tile is-vertical">
             <div class="tile is-parent is-8 center">
               <div class="tile is-child">
-                <input class="input" type="text" placeholder="5318008">
+                <input id="hi" class="input" type="text" placeholder="5318008">
               </div>
             </div>
-          <div class="tile is-vertical is-8 center">
+          <div class="tile is-vertical is-8 center test">
             <div class="tile">
               <div class="tile is-parent">
-                <div class="tile is-child box">
-                  <span> 1 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 2 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 3 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 4 </span>
-                </div>
+                <div class="tile is-child box is-light">AC</div>
+                <div class="tile is-child box is-light">CE</div>
               </div>
             </div>
             <div class="tile">
               <div class="tile is-parent">
-                <div class="tile is-child box">
-                  <span> 5 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 6 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 7 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> 8 </span>
-                </div>
+                <div class="tile is-child box">1</div>
+                <div class="tile is-child box">2</div>
+                <div class="tile is-child box">3</div>
+                <div class="tile is-child box">4</div>
               </div>
             </div>
             <div class="tile">
               <div class="tile is-parent">
-                <div class="tile is-child box">
-                  <span> 9 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> + </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> - </span>
-                </div>
-                <div class="tile is-child box">
-                  <span>  </span>
-                </div>
+                <div class="tile is-child box">5</div>
+                <div class="tile is-child box">6</div>
+                <div class="tile is-child box">7</div>
+                <div class="tile is-child box">8</div>
               </div>
             </div>
             <div class="tile">
               <div class="tile is-parent">
-                <div class="tile is-child box">
-                  <span> 0 </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> x </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> / </span>
-                </div>
-                <div class="tile is-child box">
-                  <span> = </span>
-                </div>
+                <div class="tile is-child box">9</div>
+                <div class="tile is-child box">0</div>
+                <div class="tile is-child box">+</div>
+                <div class="tile is-child box">-</div>
+              </div>
+            </div>
+            <div class="tile">
+              <div class="tile is-parent">
+                <div class="tile is-child box">x</div>
+                <div class="tile is-child box">/</div>
+                <div class="tile is-child box">:)</div>
+                <div class="tile is-child box">=</div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    
+    <script src="main.js"></script>
   </body>
 </html>
